# angry_birds_project

./: .gitmodules  CMakeLists.txt  Meeting-notes.md  README.md
libs/: CMakeLists.txt  readme.md
libs/box2d/: CMakeLists.txt
libs/sfml/: CMakeLists.txt
resources/levels/: level1.txt  level2.txt  level3.txt
src/: CMakeLists.txt  bird.cpp  bird.hpp  game.cpp  game.hpp  ground.hpp  level.cpp  level.hpp  main.cpp  menu.cpp  menu.hpp  menu_level.cpp  menu_level.hpp  menu_lose.cpp  menu_lose.hpp  menu_start.cpp  menu_start.hpp  menu_win.cpp  menu_win.hpp  object.cpp  object.hpp  obstacle.hpp  operators.cpp  operators.hpp  pig.hpp
