cmake_minimum_required (VERSION 3.25)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON) 
set(PROJECT_BINARY_DIR ${CMAKE_SOURCE_DIR})
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR})
set(BOX2D_DIR "${CMAKE_SOURCE_DIR}/libs/box2d")
set(SFML_DIR "${CMAKE_SOURCE_DIR}/libs/SFML")
include_directories("${PROJECT_BINARY_DIR}")
include_directories("${BOX2D_DIR}")
include_directories (/usr/include/freetype2)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
endif()
project (angry_birds)

file(GLOB SOURCES src/*.cpp)
set(EXECUTABLE_NAME "angry_birds")
add_executable(${EXECUTABLE_NAME} ${SOURCES})
add_subdirectory("${BOX2D_DIR}" box2d)
target_link_libraries(angry_birds box2d)
target_link_libraries (angry_birds ${SFML_INCLUDE_DIRS})
target_include_directories(angry_birds PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/libs")
if(WIN32)
    file(COPY_FILE libs/SFML/extlibs/bin/x64/openal32.dll "${CMAKE_BINARY_DIR}/openal32.dll")
endif()
target_link_libraries(angry_birds sfml-graphics sfml-audio sfml-network sfml-system sfml-window)
target_include_directories(angry_birds PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/libs")